--- a/banque/banque-web/src/main/webapp/index.xhtml
+++ b/banque/banque-web/src/main/webapp/index.xhtml
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Java EE 5.0 Example</title>
+    <style type="text/css">@import "ow2_jonas.css";</style>
     </head>
 
     <body>
@@ -24,6 +25,11 @@
             </td>
           </tr>
           <tr>
+            <td>
+              <form action="/banque-web/banque/unified" method="get">
+                <div><input type="submit" value="View all" /></div>
+              </form>
+            </td>
             <td>
               <form action="/banque-web/banque/accounts" method="get">
                 <div><input type="submit" value="View accounts" /></div>
